--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -42,7 +42,7 @@
 }
 
 #our-collection {
-  padding: 152px 0 234px 0;
+  padding: 152px 0 204px 0;
 
   h2 {
     text-align: center;
@@ -78,6 +78,7 @@
 
     img {
       max-width: 255px;
+      margin-bottom: 78px;
     }
 
     h3 {
